# uptime-kuma-notifier

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .release-please-config.json  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Entitlements.plist  Info.plist  LICENSE  Makefile  PACKAGING.md  PLAN.md  PREFERENCES_README.md  Package.swift  QUICK_START.md  README.md  cog.toml  config.example.toml  rust-toolchain.toml  test_connection.rs  test_preferences.rs
.github/: dependabot.yml
.github/workflows/: appstore-release.yml  build-package.yml  main.yml  pr-validation.yml  release-on-merge.yml
Assets/: AppIcon.icns
Sources/UptimeKumaNotifier/App/: UptimeKumaNotifierApp.swift
Sources/UptimeKumaNotifier/Models/: Heartbeat.swift  Monitor.swift  MonitorStatus.swift  Server.swift  ServerConnectionState.swift
Sources/UptimeKumaNotifier/Services/: KeychainService.swift  NotificationService.swift  SocketIOService.swift  TOTPService.swift
Sources/UptimeKumaNotifier/ViewModels/: ServerConnectionViewModel.swift  ServerManager.swift
Sources/UptimeKumaNotifier/Views/: MenuBarView.swift  MonitorListView.swift  MonitorRowView.swift  ServerFormView.swift  SettingsView.swift
scripts/: build_package.sh  create_icon.sh  install_dependencies.sh  notarize.sh
src/: main.rs  native_preferences.rs  preferences.rs  simple_preferences.rs
