[package]
name = "uptime_kuma_notifier"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "uptime_kuma_notifier"
path = "src/main.rs"

[[bin]]
name = "test_connection"
path = "test_connection.rs"

[[bin]]
name = "test_preferences"
path = "test_preferences.rs"

[features]
# Dummy feature to silence 'unexpected cfg condition value: cargo-clippy' warnings
cargo-clippy = []



[dependencies]
cacao = "0.3"
objc = "0.2.7"
objc2 = { version = "0.3.0-beta.5" }
objc2-app-kit = "0.3.1"
objc2-foundation = "0.3.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
dispatch = "0.2"
plist = "1.0"
dirs = "5.0"
